# RaylibTemplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ressources/: appIcon.rc
src/: CMakeLists.txt  main.cpp
